--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,71 +1,74 @@
 ---
 title: Introduction
-description: 'Welcome to the home of your new documentation'
+description: 'Zapply is the easiest way to integrate your application with WhatsApp.'
 ---
 
-<img
-  className="block dark:hidden"
-  src="/images/hero-light.svg"
-  alt="Hero Light"
-/>
-<img
-  className="hidden dark:block"
-  src="/images/hero-dark.svg"
-  alt="Hero Dark"
-/>
+## Quickstart
 
-## Setting up
+<Note>
+Zapply is a non-official WhatsApp API. It is not affiliated with WhatsApp or Meta in any way.
+</Note>
 
-The first step to world-class documentation is setting up your editing environments.
+<Warning>
+Zapply devices are not intented for bulk messaging. If you need to send bulk messages, please contact us for a dedicated solution.
+</Warning>
+
+Learn how to get Zapply set up in your project.
 
 <CardGroup cols={2}>
+  {/* <Card
+    title="Node.js Quickstart"
+    icon="node-js"
+    href="quickstart/nodejs"
+  />
   <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
-  >
-    Get your docs set up locally for easy development
-  </Card>
+    title="Python Quickstart"
+    icon="python"
+    href="quickstart/python"
+  /> */}
   <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
-  >
-    Preview your changes before you push to make sure they're perfect
-  </Card>
+    title="PHP Quickstart"
+    icon="php"
+    href="quickstart/php"
+  />
+  <Card
+    title="Laravel Quickstart"
+    icon="laravel"
+    href="quickstart/laravel"
+  />
+  {/* <Card
+    title="GO Quickstart"
+    icon="golang"
+    href="quickstart/go"
+  />
+  <Card
+    title="Java Quickstart"
+    icon="java"
+    href="quickstart/java"
+  /> */}
 </CardGroup>
 
-## Make it yours
+## Explore
 
-Update your docs to your brand and add valuable content for the best user conversion.
+Discover the features of Zapply and how to use them.
 
-<CardGroup cols={2}>
+<CardGroup cols={3}>
   <Card
-    title="Customize Style"
-    icon="palette"
+    title="Devices"
     href="https://mintlify.com/docs/settings/global"
   >
-    Customize your docs to your company's colors and brands
+    Manage your WhatsApp devices
   </Card>
   <Card
-    title="Reference APIs"
-    icon="code"
+    title="Messages"
     href="https://mintlify.com/docs/api-playground/openapi"
   >
-    Automatically generate endpoints from an OpenAPI spec
+    Send and receive messages
   </Card>
   <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
+    title="Webhooks"
     href="https://mintlify.com/docs/components/accordion"
   >
-    Build interactive features and designs to guide your users
-  </Card>
-  <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/showcase"
-  >
-    Check out our showcase of our favorite documentation
+    Notify your app about WhatsApp events
   </Card>
 </CardGroup>
